--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/SD2.png" class="img-responsive" alt="Cabin">
+                        <img src="img/portfolio/SD2.PNG" class="img-responsive" alt="Cabin">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -307,8 +307,8 @@
                         <div class="modal-body">
                             <h2>JAVASCRIPT</h2>
                             <hr class="star-primary">
-                            <a href="intro.html"> <img src="img/portfolio/SD2.png" class="img-responsive img-centered" alt=""> </a>
-                            <a href="Site.html"> <img src="img/portfolio/Tic.png" class="img-responsive img-centered" alt=""> </a>
+                            <a href="intro.html"> <img src="img/portfolio/SD2.PNG" class="img-responsive img-centered" alt=""> </a>
+                            <a href="Site.html"> <img src="img/portfolio/Tic.PNG" class="img-responsive img-centered" alt=""> </a>
                             <p>응용프래그래밍 시간에 JavaScript를 배우며 여러가지 웹사이트의 유형을 만들어보기도 하고 HTML과 JavaScript언어를 배우고 이해하면서 게임뿐만이 아닌 웹페이지를 만들 수 있다는 점이 좋았다.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
