--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/SD.png" alt="" width = 100 height = 100>
+                    <img class="img-responsive" src="img/portfolio/riot.png" alt="" width = 500 height = 500>
                     <div class="intro-text">
                         <h1 class="name">HWANG HYUN WOO</h1>
                         <hr class="star-light">
@@ -153,34 +153,22 @@
                         <img src="img/portfolio/excel.png" class="img-responsive" alt="Submarine">
                     </a>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/eclipse.png" class="img-responsive" alt="Submarine">
                     </a>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- About Section -->
+
 
     <!-- Contact Section -->
     <section id="contact">
@@ -238,52 +226,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
@@ -309,21 +252,8 @@
                             <hr class="star-primary">
                             <a href="intro.html"> <img src="img/portfolio/SD2.PNG" class="img-responsive img-centered" alt=""> </a>
                             <a href="Site.html"> <img src="img/portfolio/Tic.PNG" class="img-responsive img-centered" alt=""> </a>
-                            <p>응용프래그래밍 시간에 JavaScript를 배우며 여러가지 웹사이트의 유형을 만들어보기도 하고 HTML과 JavaScript언어를 배우고 이해하면서 게임뿐만이 아닌 웹페이지를 만들 수 있다는 점이 좋았다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>응용프래그래밍 시간에 JavaScript를 배우며 비동기콜백, 배열, TextContent, createElement, addEventListener이라는 함수를 활용하여 여러가지 웹사이트의 유형을 만들어보기도 하고 HTML과 JavaScript언어를 배우고 이해하면서 게임뿐만이 아닌 웹페이지를 만들 수 있다는 점이 좋았다.</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -345,22 +275,9 @@
                         <div class="modal-body">
                             <h2>기능반</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/Rainbow.png" class="img-responsive img-centered" alt="">
-                            <p>기능반에서 DirectX라는 언어를 배우고, 지방기능경기대회를 한달동안 열심히 준비하여 내 역량을 마음껏 뽐낼 수 있는 기회가 되어 지방기능경기대회에서 좋은 성적을 거두었기 때문에 매우 의미있는 활동이라고 생각한다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/Rainbow2.png" class="img-responsive img-centered" alt="">
+                            <p>기능반에서 DirectX라는 언어로 LPDIRECT3DTEXTURE9, D3DXVECTOR3, D3DXVECTOR2, LPD3DXSPRITE, D3DXCreateTextureFromFileEx, D3DXCreateTextureFromFile, LPDIRECT3D9, 지방기능경기대회를 한달동안 열심히 준비하여 내 역량을 마음껏 뽐낼 수 있는 기회가 되어 지방기능경기대회에서 좋은 성적을 거두었기 때문에 매우 의미있는 활동이라고 생각한다.</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -382,22 +299,9 @@
                         <div class="modal-body">
                             <h2>UNITY</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/unity.png" class="img-responsive img-centered" alt="">
-                            <p>게임프로그래밍 시간에 선생님과 유니티를 하며 게임을 직접 만들어보는것이 작년 C언어를 다룰때와는 사뭇 다르면서도 코드로 짜던것이 직접 내가 오브젝트를 만들고 눈으로 보면서 실시간으로 확인하는것이 재밌고 좋았다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/unity2.png" class="img-responsive img-centered" alt="">
+                            <p>게임프로그래밍 시간에 선생님과 유니티를 하며 게임을 직접 만들어보는것이 작년 C언어를 다룰때와는 사뭇 다르면서도 컴파일 후에 그저 콘솔로 확인을 하던것이 OnTriggerEnter, OnCollisionEnter등등의 코드로 직접 내가 오브젝트를 만들고 눈으로 보면서 실시간으로 확인하는것이 재밌고 좋았다.</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -419,22 +323,9 @@
                         <div class="modal-body">
                             <h2>ANDROID STUDIO</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/android studio.png" class="img-responsive img-centered" alt="">
-                            <p>게임뿐만이 아닌 요즘 가장 뜨는 추세인 안드로이드를 배우며 JAVA코드로 안드로이드 개발환경인 안드로이드 스튜디오에서 앱을 만들어보고 직접 테스트 해보는게 신기했다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/android studio2.png" class="img-responsive img-centered" alt="">
+                            <p>게임뿐만이 아닌 요즘 가장 뜨는 추세인 안드로이드를 배우며 OnButtonClick, Toast, 레이아웃 등등 JAVA코드를 활용하여 안드로이드 개발환경인 안드로이드 스튜디오에서 앱을 만들어보고 직접 테스트 해보는게 신기했다.</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -457,21 +348,8 @@
                             <h2>C#</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/csharp.png" class="img-responsive img-centered" alt="">
-                            <p>C#은 가장 최근에 C언어, C++을 거쳐 발전된 형태의 언어인데, 유니티를 배우며 같이 C#을 배우니 코딩의 알고리즘 형식도 조금 더 자세히 이해할 수 있는 계기가 된 것 같고, 이를 통해 여러 엔진들이나 다양한 분야에 적용할 수 있다는 것이 좋은 것 같다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>C#은 가장 최근에 C언어, C++을 거쳐 발전된 형태의 언어인데, 유니티를 배우며 같이 C#을 배우니 연산자 오버로딩(operator), 오버라이드(override) 방식, dictionary, list, string같은 연산자들의 이름이나 코딩의 알고리즘 형식도 조금 더 자세히 이해할 수 있는 계기가 된 것 같고, 이를 통해 여러 엔진들이나 다양한 분야에 적용할 수 있다는 것이 좋은 것 같다.</p>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -493,23 +371,37 @@
                         <div class="modal-body">
                             <h2>EXCEL</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/excel.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/excel2.png" class="img-responsive img-centered" alt="" width = 500 height = 500>
                             <p>자율시간에 자격증 시험을 위해 엑셀을 배우는 것이지만, 멀리 보면 미래에 한글, 엑셀등을 이용하여 여러 문서들을 작성하는것이
-                              필수이기때문에 자격증뿐만이 아닌 미래에 여러가지 문서들을 효율적으로 관리하고 편리하게 사용하기 위해서 배우는 것이라고 생각하고 있다.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                              필수이기때문에 자격증뿐만이 아닌 미래에 여러가지 문서들을 효율적으로 관리하고 편리하게 사용하기 위해서 배우는 것이라고 생각하고 있다. 또, SUM, SUMIF, MOD등 엑셀
+                              함수들을 활용하여 기능반에서 기능원들끼리 무엇을 시켜먹었는지 정리하여 쉽게 보고 이해할 수 있는 표를 만듬으로써 엑셀이 얼마나 다양하게, 또 실생활에도 쉽게
+                              쓰일 수 있음을 이해하며 이 표를 지금까지도 잘 쓰고 있다.</p>
+
+                            <button id="btnSubmit" type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>ECLIPSE</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/eclipse2.png" class="img-responsive img-centered" alt="" width = 500 height = 500>
+                            <p>Eclipse로 JAJA언어를 사용하여 Getter Setter를 활용한 정보은닉을 통해 자바 사용법을 익히고 결과를 확인함으로써 JAVA언어를 어떻게 사용해야 하는지,
+                            JAVA언어를 사용하여 얻는 이로운 효율, 일률, 효과에 대해서 알 수 있다.</p>
+
                             <button id="btnSubmit" type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
