--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/eclipse.png" class="img-responsive" alt="Submarine">
+                        <img src="img/portfolio/eclipse2.png" class="img-responsive" alt="Submarine">
                     </a>
                 </div>
             </div>
@@ -398,7 +398,7 @@
                         <div class="modal-body">
                             <h2>ECLIPSE</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/eclipse2.png" class="img-responsive img-centered" alt="" width = 500 height = 500>
+                            <img src="img/portfolio/eclipse3.png" class="img-responsive img-centered" alt="" >
                             <p>Eclipse로 JAJA언어를 사용하여 Getter Setter를 활용한 정보은닉을 통해 자바 사용법을 익히고 결과를 확인함으로써 JAVA언어를 어떻게 사용해야 하는지,
                             JAVA언어를 사용하여 얻는 이로운 효율, 일률, 효과에 대해서 알 수 있다.</p>
 
