--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+    <script src = "https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -235,38 +236,39 @@
         </a>
     </div>
 
-      <footer class="text-center">
+         <!-- Footer -->
+    <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>33, Tongil-ro 92ga-gil, Eunpyeong-gu Seoul,
+                            <br>Republic of Korea</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>SNS</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="http://smc.sen.hs.kr/index.do" class="btn-social btn-outline"><span class="sr-only">Homepage</span><i class="fas fa-home"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.instagram.com/semyeong_com_hs/?hl=ko" class="btn-social btn-outline"><span class="sr-only">Instargram</span><i class="fab fa-instagram"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://www.youtube.com/channel/UC7R4MXhJqbjiv7bw3uDfSEg" class="btn-social btn-outline"><span class="sr-only">Youtube</span><i class="fab fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://smc.goorm.io/learn/lecture/2417/%EA%B2%8C%EC%9E%84%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4%EA%B3%BC-2%ED%95%99%EB%85%84-%EC%9D%91%EC%9A%A9%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%EA%B0%9C%EB%B0%9C" class="btn-social btn-outline"><span class="sr-only">GoormEdu</span><i class="fas fa-graduation-cap"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://hoc22.ebssw.kr/onlineClass/search/onlineClassSearchView.do" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fas fa-globe-asia"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About SeMyeong</h3>
+                        <p>서울시 특성화고 공업계열 취업률 1위 최초 IBM P-TECH 서울 뉴칼라스쿨 출범</a>.</p>
                     </div>
                 </div>
             </div>
@@ -275,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Your Website 2020
                     </div>
                 </div>
             </div>
